# actuarial-vm

./: Cargo.toml  FRAUD_PROOF.md  LICENSE  NOTICE  README.md  taproot_builder.rs
docs/: v3_vbyte_crusher.md
examples/: cheating_trace.rs
fixtures/: fraudulent_trace.json
src/: lib.rs  opcodes.rs  taproot_builder.rs  trace.rs  vm.rs
tests/: fraud_proof.rs  solvency_v3_tests.rs
